# PM

./: .bzrignore
A/: AndroidManifest.xml
A/res/layout/: main.xml
A/src/com/example/B/: MyActivity.java
B/: build.xml  local.properties
B/res/layout/: main.xml  text_view.xml
B/res/values/: strings.xml
B/src/com/example/B/: .directory  MainService.java  MyActivity.java
C/: AndroidManifest.xml  build.xml
C/res/layout/: main.xml
C/res/values/: strings.xml
C/src/com/example/C/: Board.java  MyActivity.java  MyService.java  MyView.java  Path.java  Point.java
D/: AndroidManifest.xml
D/res/layout/: main.xml
D/res/values/: strings.xml
D/src/com/example/D/: MyActivity.java  MyView.java
E/client/: build.xml
E/client/res/layout/: main.xml
E/client/res/values/: strings.xml
E/client/src/com/example/client/: GCMIntentService.java  MyActivity.java
E/server/: CMakeLists.txt  main.cpp
E/server/.kdev4/: server.kdev4
E/submit/: AndroidManifest.xml
E/submit/res/layout/: main.xml
E/submit/res/values/: strings.xml
E/submit/src/com/example/client/: GCMIntentService.java  MyActivity.java
F/: AndroidManifest.xml
F/res/layout/: marker_demo.xml
F/src/com/example/mapdemo/: MainActivity.java
